service/Infrastructure/aws-cluster-creation/deployment-example.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: spike-webapp-deployment
spec:
  replicas: 2
  template: 
    metadata:
      labels:
        app: spike-webapp-tmpl
    spec:
      containers:
      - name: spike-webapp-container
        image: blinard/spike-webapp:1.1
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets
          mountPath: /app/secrets
          readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: secret-appsettings
