service/Infrastructure/aws-cluster-creation/bb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bb-service
  labels:
    app: better-bookmarks
    env: prod
spec:
  selector:
    app: better-bookmarks
    env: prod
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
