service/Infrastructure/aws-cluster-creation/service-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: spike-webapp-service
spec:
  selector:
    app: spike-webapp-tmpl
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
